apps/production/cloudflared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
  labels:
    homelab.io/app: "true"
